Add script for importing from csv file into database
The original data are stored in an excel file. There were problems with
utf8 using Spreadsheet::XLSX. The Excel file is in 2007 format. I changed
to importing the data from csv file format, which can be easily converted
with Excel. Because the data are stored in one flat table references
and links have to be extracted and stored in extra tables.

The Edit view is added with data of references and links. In the
controller data from has_many and many_to_many relationships are
flattened in an arrayref of hashrefs.

--- a/dist.ini
+++ b/dist.ini
@@ -6,7 +6,7 @@ copyright_year   = 2013
 
 abstract = WomeninBotany is a Web Application of a bibliographic database about Women in Botany
 
-version = 0.01
+version = 0.02
 
 [@Basic]
 
@@ -15,7 +15,6 @@ version = 0.01
 [Prereqs]
 DBIx::Class::PassphraseColumn = 0
 DBIx::Class::TimeStamp = 0
-DBIx::Class::Schema::PopulateMore = 0
 Carp = 0
 Catalyst::Authentication::Store::DBIx::Class = 0
 Catalyst::Model::DBIC::Schema = 0
@@ -28,7 +27,6 @@ Catalyst::View::TT = 0
 CatalystX::SimpleLogin = 0
 Config::ZOMG = 0
 DBIx::Class = 0
-DBIx::Class::Schema::PopulateMore = 0
 HTML::FormHandler = 0
 HTML::FormHandler::Model::DBIC = 0
 Log::Log4perl = 0
@@ -36,6 +34,8 @@ Modern::Perl = 0
 MooseX::MarkAsMethods = 0
 MooseX::Types::Moose = 0
 Path::Class = 0
-Spreadsheet::XLSX = 0
+Regexp::Common = 0
+String::Trim = 0
+Text::CSV_XS = 0
 
 ; authordep Pod::Weaver::Plugin::Encoding
