--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,9 @@ Thumbs.db
 *.log
 .project
 /nbproject/private/
+/root/static/js/ext/plugins/jquery/jqGrid/js/i18n/grid.locale-*.js
+!/root/static/js/ext/plugins/jquery/jqGrid/js/i18n/grid.locale-en.js
+data/womeninbotany.mwb
+root/static/js/ext/plugins/jquery/jqGrid/js/Changes.txt
+root/static/js/ext/plugins/jquery/jqGrid/js/install.txt
+root/static/js/ext/plugins/jquery/jqGrid/src/
