--- a/dist.ini
+++ b/dist.ini
@@ -6,11 +6,13 @@ copyright_year   = 2013
 
 abstract = WomeninBotany is a Web Application of a bibliographic database about Women in Botany
 
-version = 0.05
+version = 0.06
 
 [@Basic]
 
 [PodWeaver]
+
+[PkgVersion]
 
 [Prereqs]
 DBIx::Class::PassphraseColumn = 0
