Move navigation from controller to a schema role
Functions to navigate through a resultset is factored out into a Moose
Role. The Botanist schema resultset consumes this role to provide
functions to get the first, previous, next or last row of a resultset.

--- a/dist.ini
+++ b/dist.ini
@@ -6,7 +6,7 @@ copyright_year   = 2013
 
 abstract = WomeninBotany is a Web Application of a bibliographic database about Women in Botany
 
-version = 0.10
+version = 0.11
 
 [@Basic]
 
@@ -37,6 +37,7 @@ MooseX::MarkAsMethods = 0
 MooseX::Types::Moose = 0
 Path::Class = 0
 Regexp::Common = 0
+Safe::Isa = 0
 String::Trim = 0
 Text::CSV_XS = 0
 
