--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,5 @@ root/static/js/ext/plugins/jquery/jqGrid/src/
 root/static/images/womeninbotany/
 t/var/womeninbotany.db
 t/var/womeninbotany.conf
+data/womeninbotany.xlsx
+
