--- a/dist.ini
+++ b/dist.ini
@@ -50,6 +50,14 @@ location = build
 ; metadata
 [AutoPrereqs]       ; add all prereqs automatically
 
+[Prereqs]
+Catalyst::Plugin::StatusMessage = 0
+Catalyst::Plugin::Session::Store::FastMmap = 0
+Catalyst::Plugin::Authorization::Roles = 0
+CatalystX::SimpleLogin = 0
+Catalyst::Authentication::Store::LDAP = 0
+Catalyst::Authentication::Store::DBIx::Class = 0
+
 [Prereqs::AuthorDeps]   ; add authordeps as develop/requires
 
 ; build system
